- Added ImportRoutineForm class based on Mike's designs to replace the old ImportRoutineDialog (Forms\ImportRoutineForm.cs, Forms\ImportRoutineForm.Designer.cs, Forms\ImportRoutineForm.resx). - Fixed a bug in ImportDataToExcel method to skip to the next result set when the current one is empty (Controls\TaskPaneControl.cs). - Changed code in EditTableData method to use the new ImportTableViewForm class instead of the ImportTableViewDialog one (Controls\TaskPaneControl.cs) - Modified code in importRoutine method to call the new ImportRoutineForm instead of the old ImportRoutineDialog (Panels\DBObjectSelectionPanel.cs). - Included in project the new ImportRoutineForm files and excluded the old ImportRoutineDialog ones (MySQL.ForExcel.csproj).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -260,6 +260,12 @@
     <Compile Include="Forms\AppendDataToTableDialog.Designer.cs">
       <DependentUpon>AppendDataToTableDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ImportRoutineForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ImportRoutineForm.Designer.cs">
+      <DependentUpon>ImportRoutineForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ImportTableViewForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -289,12 +295,6 @@
     </Compile>
     <Compile Include="Forms\ExportDataForm.Designer.cs">
       <DependentUpon>ExportDataForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\ImportRoutineDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\ImportRoutineDialog.Designer.cs">
-      <DependentUpon>ImportRoutineDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\NewConnectionDialog.cs">
       <SubType>Form</SubType>
@@ -353,6 +353,9 @@
     <EmbeddedResource Include="Forms\AppendDataToTableDialog.resx">
       <DependentUpon>AppendDataToTableDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ImportRoutineForm.resx">
+      <DependentUpon>ImportRoutineForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ImportTableViewForm.resx">
       <DependentUpon>ImportTableViewForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -367,9 +370,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ExportDataForm.resx">
       <DependentUpon>ExportDataForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ImportRoutineDialog.resx">
-      <DependentUpon>ImportRoutineDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewConnectionDialog.resx">
       <DependentUpon>NewConnectionDialog.cs</DependentUpon>
