- Removed from bazaar Controls\ClickableInfolLabel.cs, Controls\ClickableInfolLabel.Designer.cs, Controls\ClickableInfolLabel.resx, Controls\InfolLabel.cs, Controls\InfolLabel.Designer.cs, Controls\InfolLabel.resx, Forms\AppendDataToTableDialog.Designer.cs, Forms\AppendDataToTableDialog.cs, Forms\AppendDataToTableDialog.resx, Forms\EditChangesDialog.Designer.cs, Forms\EditChangesDialog.cs, Forms\EditChangesDialog.resx, Forms\ExportDataToTableDialog.Designer.cs, Forms\ExportDataToTableDialog.cs, Forms\ExportDataToTableDialog.resx, Forms\ImportRoutineDialog.Designer.cs, Forms\ImportRoutineDialog.cs, Forms\ImportRoutineDialog.resx, Forms\ImportTableViewDialog.Designer.cs, Forms\ImportTableViewDialog.cs, Forms\ImportTableViewDialog.resx, Forms\OldExporttoTableDialog.Designer.cs, Forms\OldExporttoTableDialog.cs, Forms\OldExporttoTableDialog.resx, Resources\mysql-for-excel-header.png, Resources\mysql-header-img.png. - Changed namespace to MySQL.ForExcel (Controls\HotLabel.Designer.cs, Controls\HotLabel.cs, Controls\MyTreeView.cs, Controls\SearchEdit.cs, Controls\SearchEdit.Designer.cs). - Added properties to manage Opacity, Shadow Offset and internal image and text offsets in the HotLabel class (Controls\HotLabel.cs). - Added code to OnPaint method to draw a shadow on the Description text and changed code to use the new properties for Opacity, Shadow and offsets (Controls\HotLabel.cs). - Added code to dispose of the Brush objects in the OnPaint method since according to information in the internet they must be disposed of manually (Controls\HotLabel.cs). - Added properties to manage Opacity and internal image and text offsets for tree nodes in the MyTreeView class (Controls\MyTreeView.cs). - Added code to the DrawTopLevelNode and DrawChildNode methods to use the opacity and offset properties and to Dispose of the Brush objects (Controls\MyTreeView.cs). - Added code to the SearchEdit constructor and the OnPaint method to properly display the NoTextLabel text when the contr

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -254,6 +254,9 @@
     <Compile Include="Controls\TaskPaneControl.Designer.cs">
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\TransparentLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Forms\AppendDataForm.cs">
       <SubType>Form</SubType>
     </Compile>
