- Added all new images provided by MikeZ and removed the ones that are not part of that image set to clean up the project and resources (MySQL.ForExcel.csproj, Properties\Resources.Designer.cs, Properties\Resources.resx). - Added DisabledImage property to HotLabel class to make use of the grayscale images provided by MikeZ instead of generating one at runtime, modified code in OnPaint method to use the new DisabledImage if available, if not compute it at runtime as the code was doing so before (Controls\HotLabel.cs). - Added ImagePixelsYOffset property to HotLabel class to adjust the vertical offset of the new images provided by MikeZ and added code in OnPaint method to use it (Controls\HotLabel.cs). - Added NodeHeightMultiple property (by default set to 2) to MyTreeView class to be able to play more with node sizes, since given MikeZ's designs the node heights vary between panels, with this property the multiple of child nodes can be set to something higher than 2, modified code in SetNodeHeight and AddNode methods to use this new property (Classes\MyTreeView.cs). - Modified code in DrawChildNode method to align the text vertically centered when only the title or the description is set to match MikeZ designs (Classes\MyTreeView.cs). - Changed the anchor of the grpColumnOptions to not resize when the form is resized as per MikeZ (Forms\ExportDataForm.Designer.cs). - Changed alignment of controls given MikeZ feedback (Forms\PasswordDialog.designer.cs). - Removed context menu and small images controls from panels (Panels\DBObjectSelectionPanel.Designer.cs, Panels\WelcomePanel.Designer.cs, Panels\SchemaSelectionPanel.Designer.cs). - Adjusted HotLabel properties for all labels in all panels to match the new icons given by MikeZ and to properly match the screen designs (Panels\DBObjectSelectionPanel.Designer.cs, Panels\WelcomePanel.Designer.cs, Panels\SchemaSelectionPanel.Designer.cs).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -408,6 +408,9 @@
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
     </Compile>
+    <None Include="Resources\db.Routine.32x32.png" />
+    <None Include="Resources\db.Table.32x32.png" />
+    <None Include="Resources\db.View.32x32.png" />
     <None Include="ThisAddIn.Designer.xml">
       <DependentUpon>ThisAddIn.cs</DependentUpon>
     </None>
@@ -417,57 +420,12 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\db.mgmt.Connection.16x16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\db.mgmt.Connection.32x32.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\MySQLforExcel-WelcomePanel-Separator-Grey.png" />
-    <None Include="Resources\MySQLforExcel-WelcomePanel-Separator-Blue.png" />
-    <None Include="Resources\MySQLforExcel-ObjectPanel-ExportToMySQL-Disabled-32x32.png" />
-    <None Include="Resources\MySQLforExcel-ObjectPanel-ImportData-Disabled-32x32.png" />
-    <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-Disabled-32x32.png" />
-    <None Include="Resources\MySQLforExcel-ObjectPanel-AppendData-Disabled-32x32.png" />
-    <None Include="Resources\MySQLforExcel-ObjectPanel-AppendData-32x32.png" />
-    <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-32x32.png" />
-    <None Include="Resources\MySQLforExcel-ObjectPanel-ImportData-32x32.png" />
-    <None Include="Resources\MySQLforExcel-ObjectPanel-SelectObject-32x32.png" />
-    <None Include="Resources\MySQLforExcel-ObjectPanel-ExportToMySQL-32x32.png" />
     <None Include="Resources\MySQLforExcel-Logo-48x48.png" />
-    <None Include="Resources\MySQLforExcel-SchemaPanel-NewSchema-32x32.png" />
-    <None Include="Resources\MySQLforExcel-SchemaPanel-Schemas-32x32.png" />
     <None Include="Resources\MySQLforExcel-Logo-64x64.png" />
     <None Include="Resources\MySQLforExcel-WelcomePanel-Title.png" />
-    <None Include="Resources\MySQLforExcel-WelcomePanel-ManageConnection-32x32.png" />
-    <None Include="Resources\MySQLforExcel-WelcomePanel-NewConnection-32x32.png" />
-    <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-32x32.png" />
     <None Include="Resources\MySQLforExcel-ExportDlg-ColumnOptions-32x32.png" />
     <None Include="Resources\MySQLforExcel-ExportDlg-PrimaryKey-32x32.png" />
     <None Include="Resources\MySQLforExcel-ExportDlg-TableName-32x32.png" />
-    <None Include="Resources\db.Column.16x16.png" />
-    <None Include="Resources\db.Routine.16x16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\db.Routine.32x32.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\db.Schema.16x16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\db.Schema.32x32.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\db.Table.16x16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\db.Table.32x32.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\db.View.16x16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\db.View.32x32.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ExcelAddinFilter.png" />
@@ -476,6 +434,26 @@
     <Content Include="Resources\Chain Link-32x32.png" />
     <Content Include="Resources\chain_link.24x24.png" />
     <Content Include="Resources\mysql-for-excel.ico" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-Disabled-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-ExportToMySQL-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-ExportToMySQL-Disabled-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-ImportData-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-ImportData-Disabled-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-ListItem-Routine-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-ListItem-Table-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-ListItem-View-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-SelectObject-24x24.png" />
+    <None Include="Resources\MySQLforExcel-SchemaPanel-ListItem-Schema-24x24.png" />
+    <None Include="Resources\MySQLforExcel-SchemaPanel-NewSchema-24x24.png" />
+    <None Include="Resources\MySQLforExcel-SchemaPanel-Schemas-24x24.png" />
+    <None Include="Resources\MySQLforExcel-Separator.png" />
+    <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-24x24.png" />
+    <None Include="Resources\MySQLforExcel-WelcomePanel-ListItem-Connection-32x32.png" />
+    <None Include="Resources\MySQLforExcel-WelcomePanel-ManageConnection-24x24.png" />
+    <None Include="Resources\MySQLforExcel-WelcomePanel-NewConnection-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-AppendData-24x24.png" />
+    <None Include="Resources\MySQLforExcel-ObjectPanel-AppendData-Disabled-24x24.png" />
     <Content Include="Resources\Warning.png" />
     <Content Include="Todo.txt" />
   </ItemGroup>
