- Added StyleableHelper and CustomVisualStyleElements to aid with the rendering of elements with Visual Styles for Windows Vista and 7 (Classes\StyleableHelper.cs, MySQL.ForExcel.csproj). - Added AutoStyleableBaseForm and AutoStyleableBaseDialog new classes to automatically set the look and feel depending on the Windows version (Forms\AutoStyleableBaseForm.cs, Forms\AutoStyleableBaseForm.Designer.cs, Forms\AutoStyleableBaseForm.resx, Forms\AutoStyleableBaseDialog.cs, Forms\AutoStyleableBaseDialog.Designer.cs, Forms\AutoStyleableBaseDialog.resx, MySQL.ForExcel.csproj). - Changed all dialogs to inherit from the AutoStyleableBaseDialog class and set properties of that new class (Forms\AppendDataForm.cs, Forms\AppendDataForm.Designer.cs, Forms\EditDataDialog.cs, Forms\EditDataDialog.Designer.cs, Forms\ExportAdvancedOptionsDialog.cs, Forms\ExportAdvancedOptionsDialog.Designer.cs, Forms\ExportDataForm.cs, Forms\ExportDataForm.Designer.cs, Forms\ImportRoutineForm.cs, ImportRoutineForm.Designer.cs, Forms\ImportTableViewForm.cs, Forms\ImportTableViewForm.Designer.cs, Forms\NewConnectionDialog.cs, Forms\NewConnectionDialogDesigner.cs, Forms\NewSchemaDialog.cs, Forms\NewSchemaDialog.Designer.cs, Forms\PasswordDialog.cs, Forms\PasswordDialog.Designer.cs, - Indented the "Add additional buffer to VARCHAR length" option to make it appear as a sub-option of the "Analyze and try to detect correct datatype based on column fields content" option, and added code to enable the sub-option when the option is checked (Forms\ExportAdvancedOptionsDialog.cs). - Adjusted the spacing on some of the HotLabel controls (Panels\DBObjectSelectionPanel.Designer.cs). - Added taskPaneControl_SizeChanged event method to cancel the resizing of the  MySQL for Excel Custom Pane and always set the width to 250 pixels, as per MikeZ who stated the pane should not be resizable by users (ThisAddIn.cs).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -220,6 +220,7 @@
     </Compile>
     <Compile Include="Classes\MySQLIndex.cs" />
     <Compile Include="Classes\MySQLTable.cs" />
+    <Compile Include="Classes\StyleableHelper.cs" />
     <Compile Include="Classes\Utilities.cs" />
     <Compile Include="Controls\HotLabel.cs">
       <SubType>UserControl</SubType>
@@ -262,6 +263,18 @@
     </Compile>
     <Compile Include="Forms\AppendDataForm.Designer.cs">
       <DependentUpon>AppendDataForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AutoStyleableBaseDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AutoStyleableBaseDialog.Designer.cs">
+      <DependentUpon>AutoStyleableBaseDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AutoStyleableBaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AutoStyleableBaseForm.Designer.cs">
+      <DependentUpon>AutoStyleableBaseForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\ImportRoutineForm.cs">
       <SubType>Form</SubType>
@@ -349,6 +362,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AppendDataForm.resx">
       <DependentUpon>AppendDataForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AutoStyleableBaseDialog.resx">
+      <DependentUpon>AutoStyleableBaseDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AutoStyleableBaseForm.resx">
+      <DependentUpon>AutoStyleableBaseForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ImportRoutineForm.resx">
       <DependentUpon>ImportRoutineForm.cs</DependentUpon>
