- Changed the datatype of CharMaxLength property in MySQLColumn class from int to long since it was causing a problem with big values, added code as well to ParseColumnInfo method to convert values from the DB to Int64 (Classes\MySQLColumn.cs). - Changed code in OnPaint method to enhance the way the text is word wrapped (Controls\TransparentLabel.cs). - Fixed code in AppendDataForm constructor to display the passed Excel Range Address on the window's title bar (Forms\AppendDataForm.cs). - Changed some properties to be public to expose them to the property editor (Forms\AutoStyleableBaseForm.cs). - Added new AutoStyleableBasePanel class to inherit to all other panels in order to have the panels switch fonts to the System Font depending on the Windows version (Panels\AutoStyleableBasePanel.cs, Panels\AutoStyleableBasePanel.Designer.cs, MySQL.ForExcel.csproj). - Inherited all panel classes from AutoStyleableBasePanel class and added code to exclude the HotLabel controls from switching fonts (they will stay with the Tahoma font as per MikeZ designs) (Panels\WelcomePanel.cs, Panels\WelcomePanel.Designer.cs, Panels\SchemaSelectionPanel.cs, Panels\SchemaSelectionPanel.Designer.cs, Panels\DBObjectSelectionPanel.cs, Panels\DBObjectSelectionPanel.Designer.cs). - Changed opacity settings for texts and shadows for all HotLabel controls to match MikeZ designs (Panels\WelcomePanel.Designer.cs, Panels\SchemaSelectionPanel.Designer.cs, Panels\DBObjectSelectionPanel.Designer.cs).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -324,6 +324,12 @@
     <Compile Include="Forms\PasswordDialog.designer.cs">
       <DependentUpon>PasswordDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Panels\AutoStyleableBasePanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Panels\AutoStyleableBasePanel.Designer.cs">
+      <DependentUpon>AutoStyleableBasePanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Panels\DBObjectSelectionPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
