- Modified all dialogs to revert back to a static look and feel regardless of the Windows version (turned off the AutoStyleDialog flag for it and the DrawPanelsSeparator on) and added back the main instruction labels since they will not be rendered using VisualStyles (Forms\AppendDataForm.Designer.cs, Forms\EditDataDialog.Designer.cs, Forms\ExportAdvancedOptionsDialog.Designer.cs, Forms\ExportDataForm.Designer.cs, Forms\ImportRoutineForm.Designer.cs, Forms\ImportTableViewForm.Designer.cs, Forms\NewConnectionDialog.Designer.cs, Forms\NewSchemaDialog.Designer.cs, Forms\PasswordDialog.designer.cs). - Added AutoStyleDialog, DrawPanelsSeparator, PanelsSeparatorColor and PanelsSeparatorWidth properties to AutoStyleableBaseDialog class to turn off the rendering of elements using VisualStyles and to manually draw the panels separators present in Vista dialogs; modified also contentAreaPanel_Paint, commandAreaPanel_Paint and footNoteAreaPanel_Paint methods to honor the AutoStyleDialog flag and to also draw the separator line for panels when the DrawPanelsSeparator flag is true (Forms\AutoStyleableBaseDialog.cs). - Removed the InheritFontToControlsList property and modified InheritFontToControls method to first recurse through child controls and then do the font checking and change for the existing control (Forms\AutoStyleableBaseForm.cs and Panels\AutoStyleableBasePanel.cs). - Reverted back for now the inheritance on all panels from AutoStyleableBasePanel to UserControl since the change introduced a bug in the UI (Panels\WelcomePanel.cs, Panels\SchemaSelectionPanel.cs, Panels\DBObjectSelectionPanel.cs). - Changed the image for the logo on the Password Dialog (Forms\ PasswordDialog.designer.cs). - Added to resources new images for Append Data Dialog (Properties\Resources.Designer.cs, Properties\Resources.resx, MySQL.ForExcel.csproj).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -479,6 +479,10 @@
     <None Include="Resources\MySQLforExcel-WelcomePanel-NewConnection-24x24.png" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-AppendData-24x24.png" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-AppendData-Disabled-24x24.png" />
+    <None Include="Resources\MySQLforExcel-Security.png" />
+    <None Include="Resources\MySQLforExcel-AppendDlg-Arrow-Down.png" />
+    <None Include="Resources\MySQLforExcel-AppendDlg-ColumnMapping-32x32.png" />
+    <None Include="Resources\MySQLforExcel-AppendDlg-ManualColumnMapping-32x32.png" />
     <Content Include="Resources\Warning.png" />
     <Content Include="Todo.txt" />
   </ItemGroup>
