- Optimized the TransparentLabel class code by extracting logic from the OnPaint method to call it just when needed (like the splitting of the words to emulate WordWrapping and the calculation of the height of the text), also changed the inheritance from Label to UserControl to see if that helped with drawing flickering but it did not, so further research will be needed (Controls\TransparentLabel.cs). - Added 2 new more images to the resources for the Import Routine Dialog (Properties\Resources.Designer.cs, Properties\Resources.resx, MySQL.ForExcel.csproj). - Modified TreeView to change the node height to match Mike's designs, also removed the sublabel for all node elements, changed the font style to regular and filtered out functions to only show procedures (Panels\DBObjectSelectionPanel.cs, Panels\DBObjectSelectionPanel.Designer.cs). - Added 3 pixels offset between icons and texts for all HotLabel controls in all panels (Panels\WelcomePanel.Designer.cs, Panels\SchemaSelectionPanel.Designer.cs, Panels\DBObjectSelectionPanel.Designer.cs). - Changed regular Label controls to use the TransparentLabel control and adjusted opacity to match Mike's designs (Panels\WelcomePanel.Designer.cs, Panels\SchemaSelectionPanel.Designer.cs).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -256,7 +256,7 @@
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\TransparentLabel.cs">
-      <SubType>Component</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Forms\AppendDataForm.cs">
       <SubType>Form</SubType>
@@ -483,6 +483,8 @@
     <None Include="Resources\MySQLforExcel-AppendDlg-Arrow-Down.png" />
     <None Include="Resources\MySQLforExcel-AppendDlg-ColumnMapping-32x32.png" />
     <None Include="Resources\MySQLforExcel-AppendDlg-ManualColumnMapping-32x32.png" />
+    <None Include="Resources\MySQLforExcel-ImportRoutineDlg-Params-32x32.png" />
+    <None Include="Resources\MySQLforExcel-ImportRoutineDlg-Options-32x32.png" />
     <Content Include="Resources\Warning.png" />
     <Content Include="Todo.txt" />
   </ItemGroup>
